packages/typ/tests/fixtures/diagnostics/0467_modules_record_manifest_mismatch_05.ml
module R : sig
  type t = { size : bool }
  val x : t
end = struct
  type t = { size : int }
  let x = { size = 4 }
end
